# surface_reconstruction

./: CMakeLists.txt  README.md
Engines/: CMakeLists.txt
Engines/Core/: CMakeLists.txt
Engines/Core/include/Core/: MainEngine.hpp
Engines/Core/src/: MainEngine.cpp
Engines/MultiScene/: CMakeLists.txt
Engines/MultiScene/include/MultiScene/: ActiveMapManager.hpp
Engines/ViewBuilding/: CMakeLists.txt
Engines/ViewBuilding/include/ViewBuilding/: ViewBuilder.hpp
Engines/ViewBuilding/src/: ViewBuilder.cpp
Engines/Views/include/Views/: View.h
FernRelocLib/: CMakeLists.txt
FernRelocLib/include/FernRelocLib/: FernConservatory.hpp  PixelUtils.hpp  PoseDatabase.hpp  RelocDatabase.hpp  Relocaliser.hpp
FernRelocLib/src/: FernConservatory.cpp  PoseDatabase.cpp  RelocDatabase.cpp
Tracker/include/Tracker/: cameraParams.h
VisualisationEngine/include/VisualisationEngine/: RenderState.h  TrackingState.h  VisualisationEngine.h  VoxelBlockHash.h
VisualisationEngine/src/: VisualisationEngine.cpp
test/: collect_data.cpp  test_relocaiser.cpp  test_visualisation.cpp
